[gd_scene load_steps=4 format=2]

[ext_resource path="res://GUI.gd" type="Script" id=1]
[ext_resource path="res://Board.gd" type="Script" id=2]
[ext_resource path="res://GameFont.res" type="DynamicFont" id=3]

[node name="Root" type="Node"]

[node name="GUI" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameDivider" type="VBoxContainer" parent="GUI"]
margin_right = 984.0
margin_bottom = 760.0
mouse_filter = 2

[node name="TopBarContainer" type="HBoxContainer" parent="GUI/GameDivider"]
margin_right = 984.0
margin_bottom = 60.0
mouse_filter = 2
size_flags_horizontal = 3
alignment = 1

[node name="ScoreVertical" type="VBoxContainer" parent="GUI/GameDivider/TopBarContainer"]
margin_right = 854.0
margin_bottom = 60.0
size_flags_horizontal = 3

[node name="BlackScoreContainer" type="HBoxContainer" parent="GUI/GameDivider/TopBarContainer/ScoreVertical"]
margin_right = 854.0
margin_bottom = 28.0

[node name="BlackScoreLabel" type="Label" parent="GUI/GameDivider/TopBarContainer/ScoreVertical/BlackScoreContainer"]
margin_right = 66.0
margin_bottom = 28.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Black:"

[node name="BlackScoreText" type="Label" parent="GUI/GameDivider/TopBarContainer/ScoreVertical/BlackScoreContainer"]
margin_left = 70.0
margin_right = 84.0
margin_bottom = 28.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "2"

[node name="WhiteScoreContainer" type="HBoxContainer" parent="GUI/GameDivider/TopBarContainer/ScoreVertical"]
margin_top = 32.0
margin_right = 854.0
margin_bottom = 60.0

[node name="WhiteScoreLabel" type="Label" parent="GUI/GameDivider/TopBarContainer/ScoreVertical/WhiteScoreContainer"]
margin_right = 74.0
margin_bottom = 28.0
custom_fonts/font = ExtResource( 3 )
text = "White:"

[node name="WhiteScoreText" type="Label" parent="GUI/GameDivider/TopBarContainer/ScoreVertical/WhiteScoreContainer"]
margin_left = 78.0
margin_right = 92.0
margin_bottom = 28.0
custom_fonts/font = ExtResource( 3 )
text = "2"

[node name="TurnVertical" type="VBoxContainer" parent="GUI/GameDivider/TopBarContainer"]
margin_left = 858.0
margin_right = 984.0
margin_bottom = 60.0

[node name="TurnContainer" type="HBoxContainer" parent="GUI/GameDivider/TopBarContainer/TurnVertical"]
margin_right = 126.0
margin_bottom = 28.0

[node name="TurnLabel" type="Label" parent="GUI/GameDivider/TopBarContainer/TurnVertical/TurnContainer"]
margin_right = 64.0
margin_bottom = 28.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = " Turn:"

[node name="TurnText" type="Label" parent="GUI/GameDivider/TopBarContainer/TurnVertical/TurnContainer"]
margin_left = 68.0
margin_right = 126.0
margin_bottom = 28.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "black"

[node name="Skip" type="Button" parent="GUI/GameDivider/TopBarContainer/TurnVertical"]
visible = false
margin_top = 32.0
margin_right = 126.0
margin_bottom = 66.0
custom_fonts/font = ExtResource( 3 )
text = "Skip"

[node name="Board" type="MarginContainer" parent="GUI/GameDivider"]
margin_top = 64.0
margin_right = 984.0
margin_bottom = 760.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 2 )
[connection signal="pressed" from="GUI/GameDivider/TopBarContainer/TurnVertical/Skip" to="GUI/GameDivider/Board" method="_on_Skip_pressed"]
[connection signal="game_over" from="GUI/GameDivider/Board" to="GUI" method="_on_Board_game_over"]
[connection signal="pieces_taken" from="GUI/GameDivider/Board" to="GUI" method="_on_Board_pieces_taken"]
[connection signal="turn_changed" from="GUI/GameDivider/Board" to="GUI" method="_on_Board_turn_changed"]
